config: update description
Signed-off-by: Psychonauts of KGP <psychonautsofkgp@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title:          "Psychonauts of KGP"
-description:    "Minimal Jekyll theme for storytellers"
+description:    "Stories by people who love to experiment with their consciousness"
 baseurl:        ""
 url:            ""
 
